--- a/Instagram.html
+++ b/Instagram.html
@@ -51,7 +51,7 @@
     <div class="navbar">
       <div class="links">
         <div class="navspace"><a href="index.html">Home</a></div>
-        <div class="navspace"><a href="events.html">Events</a></div>
+        <div class="navspace"><a href="events.html">Creator Spotlight</a></div>
         <div class="navspace"><a href="Instagram.html">Testimonials</a></div>
         <div class="navspace"><a href="imagePage.html">Contact Us</a></div>
         <div class="navspace">
@@ -59,7 +59,7 @@
             <button class="dropbtn">Other <i class="fas fa-chevron-down"></i></button>
             <div class="dropdown-content">
               <a href="index.html">Home</a>
-              <a href="events.html">Events</a>
+              <a href="events.html">Creator Spotlight</a>
               <a href="Instagram.html">Testimonials</a>
               <a href="imagePage.html">Contact Us</a>
               <a onclick="ToggleDark()">Toggle dark</a>
@@ -124,7 +124,7 @@
     <div class="navbar">
       <div class="links">
         <div class="navspace"><a href="index.html">Home</a></div>
-        <div class="navspace"><a href="events.html">Events</a></div>
+        <div class="navspace"><a href="events.html">Creator Spotlight</a></div>
         <div class="navspace"><a href="Instagram.html">Testimonials</a></div>
         <div class="navspace"><a href="imagePage.html">Contact Us</a></div>
         <div class="navspace">
@@ -132,7 +132,7 @@
             <button class="dropbtn">Other <i class="fas fa-chevron-down"></i></button>
             <div class="dropdown-content">
               <a href="index.html">Home</a>
-              <a href="events.html">Events</a>
+              <a href="events.html">Creator Spotlight</a>
               <a href="instagram.html">Testimonials</a>
               <a href="imagePage.html">Contact Us</a>
               <a onclick="ToggleDark()">Toggle dark</a>
@@ -163,6 +163,8 @@
         </a>
       </div>
     </div>
+    <p style="color: white;"><i class="far fa-copyright"> Cinematography Central</i> <br>This page is for FBLA
+      Conference use only</p>
     <div class="spacer280"></div>
     <div id="ModeSwitch" style="display: none;"></div>
     <div id="ModeSwitch2" style="display: none;"></div>
