--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="navbar">
       <div class="links">
         <div class="navspace"><a href="index.html">Home</a></div>
-        <div class="navspace"><a href="events.html">Events</a></div>
+        <div class="navspace"><a href="events.html">Creator Spotlight</a></div>
         <div class="navspace"><a href="Instagram.html">Testimonials</a></div>
         <div class="navspace"><a href="imagePage.html"> Contact Us</a></div>
         <div class="navspace">
@@ -48,7 +48,7 @@
             <button class="dropbtn">Other <i class="fas fa-chevron-down"></i></button>
             <div class="dropdown-content">
               <a href="index.html">Home</a>
-              <a href="events.html">Events</a>
+              <a href="events.html">Creator Spotlight</a>
               <a href="instagram.html">Testimonials</a>
               <a href="imagePage.html"> Contact Us</a>
               <a onclick="ToggleDark()">Toggle dark</a>
@@ -73,11 +73,12 @@
       <div class="skewed-theme-container">
         <div class="skewed-theme" id="skewed-theme">
           <video autoplay muted controls playsinline id="theme">
-            <source src="Imgs/BringTheHeatSlomoSmol.mp4" type="video/mp4" />
+            <source src="https://youtu.be/OYz1Kqx2zQ4" type="video/mp4" />
           </video>
         </div>
       </div>
     </div>
+    <p>Song Rainy Days and Mondays by The Carpenters Video by Tyler Jordan.</p>
     <script>
       var myVideo = document.getElementById("theme");
 
@@ -101,7 +102,7 @@
           Best Production Manager
         </div>
         <div>
-          Best  Costume Designer
+          Best Costume Designer
         </div>
         <div>
           Best Actor
@@ -122,7 +123,7 @@
       <div class="navbar">
         <div class="links">
           <div class="navspace"><a href="index.html">Home</a></div>
-          <div class="navspace"><a href="events.html">Events</a></div>
+          <div class="navspace"><a href="events.html">Creator Spotlight</a></div>
           <div class="navspace"><a href="Instagram.html">Testimonials</a></div>
           <div class="navspace"><a href="imagePage.html"> Contact Us</a></div>
           <div class="navspace">
@@ -130,7 +131,7 @@
               <button class="dropbtn">Other <i class="fas fa-chevron-down"></i></button>
               <div class="dropdown-content">
                 <a href="index.html">Home</a>
-                <a href="events.html">Events</a>
+                <a href="events.html">Creator Spotlight</a>
                 <a href="Instagram.html">Testimonials</a>
                 <a href="imagePage.html"> Contact Us</a>
                 <a onclick="ToggleDark()">Toggle dark</a>
@@ -161,6 +162,8 @@
           </a>
         </div>
       </div>
+      <p style="color: white;"><i class="far fa-copyright"> Cinematography Central</i> <br>This page is for FBLA
+        Conference use only</p>
       <div class="spacer280"></div>
       <div id="ModeSwitch2" style="display: none;"></div>
       <div id="DarkNav" style="display: none;"></div>
