--- a/events.html
+++ b/events.html
@@ -183,6 +183,8 @@
         </a>
       </div>
     </div>
+    <p style="color: white;"><i class="far fa-copyright"> Cinematography Central</i> <br>This page is for FBLA
+      Conference use only</p>
     <div class="spacer280"></div>
     <div id="ModeSwitch2" style="display: none;"></div>
     <div id="ModeSwitch3" style="display: none;"></div>
