--- a/Instagram.html
+++ b/Instagram.html
@@ -29,7 +29,7 @@
   </script>
 </head>
 
-<body onload="Popup()">
+<body onload="Popup()" id="ModeSwitch">
 
   <div class="Popup" id="Popup">
     <h2>Do you prefer dark mode or light mode</h2>
@@ -49,7 +49,7 @@
     <h2>Testimonials</h2>
     <!--start of navbar-->
     <div class="navbar">
-      <div class="links">
+      <div class="links" id="DarkNav">
         <div class="navspace"><a href="index.html">Home</a></div>
         <div class="navspace"><a href="events.html">Creator Spotlight</a></div>
         <div class="navspace"><a href="Instagram.html">Testimonials</a></div>
@@ -166,11 +166,9 @@
     <p style="color: white;"><i class="far fa-copyright"> Cinematography Central</i> <br>This page is for FBLA
       Conference use only</p>
     <div class="spacer280"></div>
-    <div id="ModeSwitch" style="display: none;"></div>
     <div id="ModeSwitch2" style="display: none;"></div>
     <div id="ModeSwitch3" style="display: none;"></div>
     <div id="ModeSwitch4" style="display: none;"></div>
-    <div id="DarkNav" style="display: none;"></div>
     <div id="skewed-theme" style="display: none;"></div>
   </div>
   <!--end of bottom nav-->
