--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
       <h2>Here is our latest Video</h2>
       <div class="skewed-theme-container">
         <div class="skewed-theme" id="skewed-theme">
-          <video autoplay muted controls playsinline id="theme">
-            <source src="https://youtu.be/OYz1Kqx2zQ4" type="video/mp4" />
+          <video autoplay controls playsinline id="theme">
+            <source src="Imgs/BringTheHeatSlomoSmol.mp4" type="video/mp4" />
           </video>
         </div>
       </div>
