--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <h2>Here is our latest Video</h2>
       <div class="skewed-theme-container">
         <div class="skewed-theme" id="skewed-theme">
-          <video autoplay controls playsinline id="theme">
+          <video muted controls autoplay playsinline id="theme">
             <source src="Imgs/BringTheHeatSlomoSmol.mp4" type="video/mp4" />
           </video>
         </div>
