--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         <div class="skewed-theme" id="skewed-theme">
           <video muted controls autoplay playsinline id="theme">
             <source src="Imgs/BringTheHeatSlomoSmol.mp4" type="video/mp4" />
+            <source src="Imgs/BringTheHeatSlomoSmol.mov" type="video/mp4" />
           </video>
         </div>
       </div>
