--- a/index.html
+++ b/index.html
@@ -70,9 +70,10 @@
     </div>
     <div class="theme">
       <h2>Here is our latest Video</h2>
+      <p><Button onclick="playPause()" class="themeplay" id="ModeSwitch2">Play or Pause</Button></p>
       <div class="skewed-theme-container">
         <div class="skewed-theme" id="skewed-theme">
-          <video muted controls autoplay playsinline id="theme">
+          <video controls autoplay playsinline id="theme">
             <source src="Imgs/BringTheHeatSlomoSmol.mp4" type="video/mp4" />
             <source src="Imgs/BringTheHeatSlomoSmol.mov" type="video/mp4" />
           </video>
