added pref reset

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <script src="JavaScript/BGShuffle.js"></script>
 </head>
 
-<body onload="Popup(); bgshuffle(); testimonialswap();" onscroll="stopscrollprompt();" id="bgchange">
+<body onload="Popup(); bgshuffle();" onscroll="stopscrollprompt();" id="bgchange">
 
   <div class="Popup" id="Popup">
     <h2>Do you prefer dark mode or light mode</h2>
@@ -52,6 +52,7 @@
               <a href="instagram.html">Testimonials</a>
               <a href="imagePage.html"> Contact Us</a>
               <a onclick="ToggleDark()">Toggle dark</a>
+              <a onclick="Reset()">Reset Pref</a>
             </div>
           </div>
         </div>
@@ -111,15 +112,57 @@
         </div>
       </div>
     </div>
-    <!--<div class="events">
+    <div class="events">
       <h2>And here you can see some of our customers testimonials.</h2>
       <div class="testimonials">
-        <h4 id="testimonialname">"WOW Just WOW"</h4>
-        <p id="testimonial">Not only did they ask me for creative input every step of the way but I also got to learn
-          about
-          Cinematography from their amazing crew!</p>
+        <div class="testimonial1">
+          <h4 id="testimonialname">"WOW Just WOW"</h4>
+          <p id="testimonial">Not only did they ask me for creative input every step of the way but I also got to learn
+            about
+            Cinematography from their amazing crew!</p>
+        </div>
       </div>
-    </div>-->
+      <div class="testimonials">
+        <div class="testimonial2">
+          <h4 id="testimonialname">"WOW Just WOW"</h4>
+          <p id="testimonial">Not only did they ask me for creative input every step of the way but I also got to learn
+            about
+            Cinematography from their amazing crew!</p>
+        </div>
+      </div>
+      <div class="testimonials">
+        <div class="testimonial3">
+          <h4 id="testimonialname">"WOW Just WOW"</h4>
+          <p id="testimonial">Not only did they ask me for creative input every step of the way but I also got to learn
+            about
+            Cinematography from their amazing crew!</p>
+        </div>
+      </div>
+      <div class="testimonials">
+        <div class="testimonial4">
+          <h4 id="testimonialname">"WOW Just WOW"</h4>
+          <p id="testimonial">Not only did they ask me for creative input every step of the way but I also got to learn
+            about
+            Cinematography from their amazing crew!</p>
+        </div>
+      </div>
+      <div class="testimonials">
+        <div class="testimonial5">
+          <h4 id="testimonialname">"WOW Just WOW"</h4>
+          <p id="testimonial">Not only did they ask me for creative input every step of the way but I also got to learn
+            about
+            Cinematography from their amazing crew!</p>
+        </div>
+      </div>
+      <div class="testimonials">
+        <div class="testimonial6">
+          <h4 id="testimonialname">"WOW Just WOW"</h4>
+          <p id="testimonial">Not only did they ask me for creative input every step of the way but I also got to learn
+            about
+            Cinematography from their amazing crew!</p>
+        </div>
+      </div>
+    </div>
     <!--bottom nav-->
     <div class="bottomnav">
       <div class="navbar">
