--- a/imagePage.html
+++ b/imagePage.html
@@ -94,17 +94,17 @@
         <a href="">
           <div class="textmargin">
             <div class="text">Our Instagram</div>
-          </div> <br><img src="Imgs/Instagram.png" alt="Instagram pic" width="55px">
+          </div> <br><img src="Imgs/Level 1 intuition.png" alt="Instagram pic" width="55px">
         </a>
         <a href="">
           <div class="textmargin">
             <div class="text">Full Videos Instagram</div>
-          </div> <br><img src="Imgs/Instagram.png" alt="Instagram pic" width="55px">
+          </div> <br><img src="Imgs/Level 2 intuition.png" alt="Instagram pic" width="55px">
         </a>
         <a href="">
           <div class="textmargin">
             <div class="text">Behind The Scenes</div>
-          </div> <br><img src="Imgs/Instagram.png" alt="Instagram pic" width="55px">
+          </div> <br><img src="Imgs/Level 3 intuition.png" alt="Instagram pic" width="55px">
         </a>
         <a href="">
           <div class="textmargin">
